# Music-Visualiser

./: .gitignore  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/analysis/: mod.rs
crates/core/src/assets/: mod.rs
crates/core/src/audio/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/mapping/: mod.rs
crates/core/src/record/: mod.rs
crates/core/src/render/: mod.rs
crates/core/src/scene/: mod.rs
crates/core/src/timeline/: mod.rs
