[package]
name = "music-visualiser-app"
version = "0.1.0"
edition = "2021"
authors = ["Music Visualiser Team"]
description = "Command line entry point for the Music Visualiser application."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
music-visualiser-core = { path = "../core" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
