[package]
name = "music-visualiser-core"
version = "0.1.0"
edition = "2021"
authors = ["Music Visualiser Team"]
description = "Core library for the Music Visualiser application."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
realfft = "3.5"
